[42 regression] Double-clicking ics files when gnome-calendar is the default handler for ics files doesn't open gnome-calendar anymore
Affected version
- Fedora 36
- gnome-calendar 42.beta
Bug summary
Double-clicking ics files when gnome-calendar is the default handler for ics files doesn't open gnome-calendar anymore.
Steps to reproduce
killall gnome-calendar
- Set gnome-calendar as default handler for ics files
- Doube-click an ics file of your choice
What happened
Nohing.
What did you expect to happen
gnome-calendar and the import dialog open.