import-dialog: Only search for non-NULL default calendars

The default calendar might be NULL during the initial loading,
protect against that.

Fixes https://gitlab.gnome.org/GNOME/gnome-calendar/-/issues/813